# transpiler-csharp-cplusplus

./: ADVANCED_FEATURES.md  ARCHITECTURE.md  CMakeLists.txt  COMPILATION_PROCESS.md  COMPLETE_SOURCE_FILES.md  GETTING_STARTED.md  IR_DOCUMENTATION.md  LICENSE  MONTH3_QUICKSTART.md  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  REGEX_IMPROVEMENTS.md  REGEX_TEST_GUIDE.md  REGEX_TEST_RESULTS.md  ROADMAP.md  THEORY.md  VALIDATOR_GUIDE.md  debug_lexer.cpp  output.cpp  output.h  output.ir
.github/: copilot-instructions.md
examples/: calculator.cs  exceptions.cs  generics.cs  hello.cs  inheritance.cs  interface.cs  loops.cs  simple.cs  simple_class.cs  simple_interface.cs  test_patterns.txt
src/: main.cpp  regex_trace.cpp  regex_validator.cpp
src/codegen/: CodeGenerator.cpp  CodeGenerator.h
src/ir/: IR.cpp  IR.h  IRGenerator.cpp  IRGenerator.h  IROptimizer.cpp  IROptimizer.h
src/lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h
src/parser/: AST.cpp  AST.h  Parser.cpp  Parser.h
src/regex/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  RegexParser.cpp  RegexParser.h
tests/: CMakeLists.txt  output_calculator.h  output_exceptions.h  output_generics.h  output_hello.h  output_inheritance.h  output_interface.h  output_loops.h  output_simple.h  output_simple_class.h  run_tests.sh  test_ir  test_ir.cpp  test_lexer.cpp  test_parser.cpp  test_regex.cpp  test_regex_comprehensive.cpp
